<resources>
    <string name="app_name">Pizzalandia</string>
    <string name="name_text">Nome</string>
    <string name="password_text">Senha</string>
    <string name="email_text">Login</string>
    <string name="order_button">Realizar Pedido</string>
    <string name="my_orders_button">Meus Pedidos</string>
    <string name="about_us_button">Sobre nós</string>
    <string name="signup_button">Registrar</string>
    <string name="login_button">Confirmar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="loading">Loading…</string>
    <string name="logout">Sair</string>
    <string name="order_textview">Monte seu pedido</string>
    <string name="myorder_textview">Pedidos Realizados</string>
    <string name="see_order">Ver pedido</string>
    <string name="value_textview">R$ 0,00</string>
</resources>
