<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/confirm_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password_text"
        android:layout_below="@+id/password_text"
        android:layout_marginTop="22dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/confirm_button"
        android:layout_alignBottom="@+id/confirm_button"
        android:layout_alignStart="@+id/password_text"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/cancel_button"
        android:textColor="@android:color/holo_red_dark" />

    <EditText
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/login_text"
        android:layout_alignStart="@+id/login_text" />
</RelativeLayout>