<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.raldney.pizzalandia.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="335dp"
        android:layout_height="180dp"
        app:srcCompat="@drawable/pizzalandia"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/my_orders_button"
        android:layout_width="327dp"
        android:layout_height="51dp"
        android:text="@string/my_orders_button"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="282dp"
        android:layout_below="@+id/order_button"
        android:layout_alignStart="@+id/order_button"
        android:layout_marginTop="21dp" />

    <Button
        android:id="@+id/about_us_button"
        android:layout_width="327dp"
        android:layout_height="51dp"
        android:text="@string/about_us_button"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="341dp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/my_orders_button"
        android:layout_alignStart="@+id/my_orders_button" />

    <Button
        android:id="@+id/order_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="327dp"
        android:layout_height="51dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:backgroundTint="?android:attr/colorPressedHighlight"
        android:text="@string/order_button"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="221dp" />

    <Button
        android:id="@+id/sign_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/about_us_button"
        android:layout_below="@+id/about_us_button"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="Sign in/ Sign up"
        android:textColor="@android:color/holo_orange_light"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="445dp" />

</RelativeLayout>
